<resources>
    <string name="app_name">Undepress</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create_one">Create one!</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expert_s_description">Expert\'s description</string>
    <string name="expert_s_name">Expert\'s name</string>
    <string name="details">Details</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="log_out">Log out</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="register_button">Register</string>
</resources>
