<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/main_screen_large_padding"
    tools:context="com.hulahoop.mentalhealth.undepress.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/main_screen_small_padding">

            <ImageView
                android:layout_width="@dimen/main_screen_logo"
                android:layout_height="@dimen/main_screen_logo"
                android:layout_margin="@dimen/main_screen_logo_margin"
                android:src="@drawable/ic_person_black_24dp"
                android:tint="@color/orange" />

            <EditText
                android:id="@+id/register_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkTosca"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:textColor="@color/darkTosca"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/main_screen_small_padding">

            <ImageView
                android:layout_width="@dimen/main_screen_logo"
                android:layout_height="@dimen/main_screen_logo"
                android:layout_margin="@dimen/main_screen_logo_margin"
                android:src="@drawable/ic_home_black_24dp"
                android:tint="@color/orange" />

            <EditText
                android:id="@+id/register_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkTosca"
                android:hint="@string/enter_your_address"
                android:inputType="text"
                android:textColor="@color/darkTosca"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/main_screen_small_padding">

            <ImageView
                android:layout_width="@dimen/main_screen_logo"
                android:layout_height="@dimen/main_screen_logo"
                android:layout_margin="@dimen/main_screen_logo_margin"
                android:src="@drawable/ic_phone_black_24dp"
                android:tint="@color/orange" />

            <EditText
                android:id="@+id/register_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkTosca"
                android:hint="@string/enter_your_phone"
                android:inputType="phone"
                android:textColor="@color/darkTosca"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/main_screen_small_padding">

            <ImageView
                android:layout_width="@dimen/main_screen_logo"
                android:layout_height="@dimen/main_screen_logo"
                android:layout_margin="@dimen/main_screen_logo_margin"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/orange" />

            <EditText
                android:id="@+id/register_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkTosca"
                android:hint="@string/enter_your_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/darkTosca"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/main_screen_small_padding">

            <ImageView
                android:layout_width="@dimen/main_screen_logo"
                android:layout_height="@dimen/main_screen_logo"
                android:layout_margin="@dimen/main_screen_logo_margin"
                android:src="@drawable/ic_lock_black_24dp"
                android:tint="@color/orange" />

            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkTosca"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/darkTosca"
                android:textSize="16sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_screen_logo" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_screen_small_padding"
            android:background="@drawable/rounded_corners"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
